Recorded the keep-or-drop module-info decision in the split plan
Phase 5 has a fork that phases 1-4 did not: whether the Maven module split is
accompanied by a JPMS split. It has to be settled first, because the deferred
root-shim move (Simulator/Viewer/Imager to gui, Generator/ModelChecker/
PrologChecker staying in core) splits package nl.utwente.groove across two
named modules, which JPMS forbids outright.

The observation that tips the balance is that the shipped product does not use
JPMS at all: build-installer.sh packages with --main-jar, so GROOVE runs from
the classpath in the unnamed module and module-info.class is inert in the
installed app. The descriptor is therefore paying an Eclipse-side cost
(modulepath/classpath placement disagreements between JDT and
maven-compiler-plugin, per-module --add-opens lists in the JUnit launch) for
enforcement that the Maven split largely provides by itself.

Not deciding here, only recording both options and what they cost.